--- a/src/main/resources/messages/messages_fr.properties
+++ b/src/main/resources/messages/messages_fr.properties
@@ -14,6 +14,11 @@ form.NoCompany=Aucune
 dashboard.ComputersFound=Ordinateurs trouv&eacute;s
 dashboard.Search=Rechercher
 
+date.DateFormat=(0?[1-9]|[12][0-9]|3[01])/(0?[1-9]|1[012])/((19|20)\\d\\d)
+date.DateHourFormat=(0?[1-9]|[12][0-9]|3[01])/(0?[1-9]|1[012])/((19|20)\\d\\d)(\\s*)([01]?[0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9])
+date.DateErrorMessage=Date invalide! Veuillez saisir une date de la forme dd/mm/aaaa.
+date.DatePattern=dd/MM/yyyy
+
 edit.EditComputer=Editer l'ordinateur
 
 delete.DeleteMessage=Etes-vous sur de vouloir supprimer cet ordinateur?
