--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -14,6 +14,11 @@ form.NoCompany=None
 dashboard.ComputersFound=Computers found
 dashboard.Search=Search
 
+date.DateFormat=(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])-((19|20)\\d\\d)
+date.DateHourFormat=(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])-((19|20)\\d\\d)(\\s*)([01]?[0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9])
+date.DateErrorMessage=Invalid date! Please enter a date of the format mm-dd-yyyy.
+date.DatePattern=MM-dd-yyyy
+
 edit.EditComputer=Edit Computer
 
 delete.DeleteMessage=Are you sure you want to delete this computer?
